2007-12-18  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn43u.h: Fix RAMEND.

2007-12-18  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom1284p.h: Fix RAMEND.
	* include/avr/iom32hvb.h: Ditto.
	* include/avr/iotn48.h: Ditto.
	* include/avr/iotn88.h: Ditto.
	* include/avr/io90pwm2b.h: Ditto.
	* include/avr/io90pwm3b.h: Ditto.
	* include/avr/io90pwm216.h: Ditto.
	* include/avr/io90pwm316.h: Ditto.

2007-12-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21841: Add CLI to exit() and abort() loops
	* libc/stdlib/exit.S: add a CLI before entering the loop
	* include/stdlib.h (exit): document the CLI.

2007-12-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Bill Johnson
	bug #19669: Need function to read signature row
	* include/avr/boot.h (boot_signature_byte_get): Add new macro.

2007-12-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/runtest.sh: replace /bin/bash by /bin/sh as the
	really generic name of the shell to invoke.  Not every system has
	bash in /bin.

2007-12-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #21840.
	* include/avr/iom48p.h: Fix RAMEND.
	* include/avr/iom88p.h: Ditto.
	* include/avr/iom168p.h: Ditto.
	* include/avr/iom328p.h: Ditto.

2007-12-18  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/alloca.h: Add '__' prefix with function args. To avoid
	a possible conflict with user's CPP definitions.
	* include/math.h: Ditto.

2007-12-17  Dmitry Xmelkov  <dmix@gmail.ru>

	Make abort() as a normal extern function (instead to inline loop).
	* libc/stdlib/abort.S: Rewrite.
	* include/stdlib.h: Declare abort() as a normal, add doc.
	* tests/simulate/stdlib/abort-1.c: New file.

2007-12-16  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/stdlib/ctype.S:
	  . isalnum(): Optimize.
	  . isxdigit(): Correct a behaviour with nonzero high byte.
	  . iscntrl(): Fix bug [no-id]: iscntrl() return true for some
	  values from 0x80 to 0xff. Optimize a little.
	  . ispunct(): Optimize.